--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-globe.gl": "^2.27.2",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.0",
+    "swiper": "^11.2.8",
     "three": "^0.167.1",
     "three-stdlib": "^2.32.2"
   },
